--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "type": "commonjs",
   "dependencies": {
     "axios": "^1.13.2",
-    "bitcoinjs-lib": "^7.0.1"
+    "bitcoinjs-lib": "^7.0.1",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@types/node": "^25.0.5",
